final edits on the frontend to ensure a comment's visibility is shown on the listing when it's private but not when it's public

--- a/hypha/static_src/src/sass/apply/components/_feed.scss
+++ b/hypha/static_src/src/sass/apply/components/_feed.scss
@@ -117,6 +117,10 @@
 
         &--right {
             margin-left: auto;
+
+            span {
+                font-weight: $weight--normal;
+            }
         }
 
         &--progress {
